[package]
name = "modbus-rs"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
scroll = "0.10.1"
thiserror = "*"
crc = "1.8.1"
bbqueue = "0.4.8"
futures = "0.3.5"
crc16 = "*"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }