[package]
name = "example"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus-rs = { path = "../" }
bbqueue = "0.4.8"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-rtt-core = "0.1.1"
async-embedded = { git = "https://github.com/rust-embedded-community/async-on-embedded.git" }

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = true # !

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
panic = "abort"

# `syn` and other proc-macro crates take very long to build when optimized
# this disables optimizations for them significantly reducing the time it takes
# to build the whole dependency graph from scratch
[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false